{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerTouch",
            "id": "6ff5b14b-7464-492b-92bc-8facd56c4470",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "ad0b1076-bcea-420b-8fdd-68af61aa61a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "2ef6bd4d-0589-4398-ad35-e362dc184d5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5aa53b27-b717-43ca-8f32-7a19963526d2",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "363899a1-1585-47d2-b082-44b2aa53b9c1",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}